# bazel_timestamp_server

./: BUILD.bazel  README.md  WORKSPACE  client.py  requirements.txt  server.py  timestamp_service.proto
