load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
load("@pip_requirements//:requirements.bzl", "requirement")

py_binary(
    name = "client",
    srcs = ["client.py"],
    deps = [
        ":py_proto",
        requirement("grpcio"),
    ],
)

py_binary(
    name = "server",
    srcs = ["server.py"],
    deps = [
        ":py_proto",
        requirement("grpcio"),
    ],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

# NOTE: The *_proto_library rules do not correctly handle deps, so we have to add all dependent
# proto files as inputs. See: https://github.com/pubref/rules_protobuf/issues/130
PROTO_IMPORTS = [
    "external/com_google_protobuf/src/",
    "external/googleapis_archive",
]
PROTO_INPUTS = [
    "@com_google_protobuf//:well_known_protos",
    "//external:googleapis_protos",
]

py_proto_library(
    name = "py_proto",
    imports = PROTO_IMPORTS,
    inputs = PROTO_INPUTS,
    protos = [":protos"],
    visibility = ["//visibility:public"],
    deps = ["//external:googleapis_py_proto"],
)
